@@ -11,6 +11,10 @@
 	* help/help.m, linear-algebra/onenormest.m, plot/graphics_toolkit.m,
 	plot/pie3.m, plot/view.m, signal/periodogram.m: Grammarcheck docstrings.
 
+2011-02-05  Ben Abbott  <bpabbott@mac.com>
+
+	* plot/legend.m: Add demo for inline keys created by two plot commands.
+
 2011-02-05  David Bateman  <dbateman@free.fr>
 
 	Bug #32022 and #32343.
